<resources>
    <string name="app_name">VPD CryptoCoin</string>
    <string name="vpd_crypt0c0in">VPD Crypt0C0in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="markets">Markets</string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="max">Max</string>
    <string name="available_btc">Available: 0.501000000 BTC</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="price">$33,850.15</string>
    <string name="market_price">Market Price</string>
    <string name="price_usdt">Price (USDT)</string>
    <string name="amount_btc">Amount (BTC)</string>
    <string name="total_usdt">Total (USDT)</string>
    <string name="buy">Buy</string>
</resources>