<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".TradeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="10dp"
            android:padding="30dp"
            android:textSize="26sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/transparent_white"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/marketPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/market_price"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/innercardView"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                app:cardBackgroundColor="@color/transparent_white"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/decrement"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_do_not_disturb_on_24" />

                <TextView
                    android:id="@+id/text_count_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/price_usdt"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/increment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_add_circle_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/amountcardView"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/transparent_white"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/amount_decrement"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_do_not_disturb_on_24" />

                <TextView
                    android:id="@+id/amount_text_count_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/amount_btc"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/amount_increment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_add_circle_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/totalcardView"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/transparent_white"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/total_text_count_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1.70"
                        android:hint="@string/total_usdt"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <androidx.constraintlayout.utils.widget.MotionButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.30"
                        android:background="@color/sea_green"
                        android:fontFamily="@font/roboto"
                        android:text="@string/buy"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>