<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ConversionActivity2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/background_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/convertBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/convertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:fontFamily="@font/roboto_bold_italic"
                android:text="@string/convert"
                android:textColor="@color/white"
                android:textSize="35sp" />

        </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <TextView
            android:id="@+id/f_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="18dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_text">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="10dp"
                android:padding="30dp"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="95dp"
                android:inputType="numberDecimal"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/maxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:text="@string/max"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:fontFamily="@font/roboto_thin"
            android:layout_marginStart="20dp"
            android:text="@string/available_btc"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/to_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/to"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.038"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/available" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="225dp"
            android:layout_marginStart="18dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_text">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="10dp"
                android:padding="30dp"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="95dp"
                android:inputType="numberDecimal"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:text="@string/max"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/convertBtn"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:background="@drawable/background_gradient"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/convert"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="bottom"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.770" />
<!--        -->
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>